src/objects/Business_Relationship__c.object
<CustomObject>
    <description>This is a custom object as a child to the Account record to track multiple business partner relationship types.</description>
    <fields>
        <fullName>AD_Channel_Manager_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who will be managing this relationship?</inlineHelpText>
        <label>AD Channel Manager Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Relationships</relationshipLabel>
        <relationshipName>Business_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>Signed contract start date</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin_Share_Percentage__c</fullName>
        <inlineHelpText>Margin share percentage signed or proposed</inlineHelpText>
        <label>Margin Share Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Enter notes describing the proposed or signed relationship.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the primary contact for this relationship?</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Relationships</relationshipLabel>
        <relationshipName>Business_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <inlineHelpText>Select proposed or signed relationship.</inlineHelpText>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral/Co-Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business Relationship</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Business Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>